# nuscenes2mcap

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  Makefile  Pipfile  ProtobufWriter.py  README.md  RosmsgWriter.py  annotate.py  can.py  convert.sh  convert_mini_scenes.sh  convert_to_mcap.py  delete_all_events.py  device_name.py  events.py  get_vehicle_name.py  main.py  pyproject.toml  to_bag.py  to_mcap.py  turbomap.json  upload.sh  upload_events.py  upload_mcap.py
.github/workflows/: lint.yml
event_helpers/: __init__.py  annotators.py  client_utils.py
foxglove/: ArrowPrimitive_pb2.pyi  CameraCalibration_pb2.py  CameraCalibration_pb2.pyi  CircleAnnotation_pb2.pyi  Color_pb2.pyi  CompressedImage_pb2.py  CompressedImage_pb2.pyi  CubePrimitive_pb2.pyi  CylinderPrimitive_pb2.pyi  FrameTransform_pb2.pyi  FrameTransforms_pb2.py  FrameTransforms_pb2.pyi  GeoJSON_pb2.pyi  Grid_pb2.pyi  ImageAnnotations_pb2.py  ImageAnnotations_pb2.pyi  KeyValuePair_pb2.pyi  LaserScan_pb2.pyi  LinePrimitive_pb2.pyi  LocationFix_pb2.py  LocationFix_pb2.pyi  Log_pb2.pyi  ModelPrimitive_pb2.py  ModelPrimitive_pb2.pyi  PackedElementField_pb2.pyi  Point2_pb2.pyi  Point3_pb2.pyi  PointCloud_pb2.pyi  PointsAnnotation_pb2.pyi  PoseInFrame_pb2.pyi  Pose_pb2.pyi  PosesInFrame_pb2.pyi  Quaternion_pb2.pyi  RawImage_pb2.py  RawImage_pb2.pyi  SceneEntityDeletion_pb2.pyi  SceneEntity_pb2.pyi  SceneUpdate_pb2.pyi  SpherePrimitive_pb2.pyi  TextAnnotation_pb2.py  (+5 more)
vm_helpers/: Makefile  ready_scratch_disk.py
