[project]
name = "nuscenes2mcap"
version = "0.1.0"
description = "Convert nuScenes data into MCAP format"
requires-python = ">=3.9"
dependencies = [
    "shapely==1.8.5.post1",
    "numpy==1.26.4",
    "pyyaml==6.0.3",
    "nuscenes-devkit==1.1.11",
    "mcap==1.3.1",
    "mcap-protobuf-support==0.5.4",
    "foxglove-data-platform==0.14.2",
    "tqdm==4.67.3",
    "requests==2.34.2",
    "protobuf==7.35.0",
    "foxglove-sdk==0.24.0",
    "pypcd @ git+https://github.com/DanielPollithy/pypcd.git@88ab8c98ab81dd620bf4b22d965b37457aab78f8",
]

[dependency-groups]
dev = [
    "flake8",
    "black",
]
